--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,19 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
+		<!-- Cache -->
+		<ehcache.version>2.6.9</ehcache.version>
+		
+		<!-- Dates -->
 		<jodatime-hibernate.version>1.3</jodatime-hibernate.version>
 		<jodatime-jsptags.version>1.1.1</jodatime-jsptags.version>
 		<jadira-usertype-core.version>3.2.0.GA</jadira-usertype-core.version>
 		
-		<jaxb-impl.version>2.2.7</jaxb-impl.version>
-				
+		<!-- Static bundles -->
 		<webjars-bootstrap.version>2.3.0</webjars-bootstrap.version>
 		<webjars-jquery-ui.version>1.10.3</webjars-jquery-ui.version>
 		<webjars-jquery.version>2.0.3-1</webjars-jquery.version>
-				
+		
 		<!-- RSS -->
 		<rome.version>1.0</rome.version>
 	</properties>
@@ -58,6 +61,24 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- Cache -->
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>${ehcache.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- For EhCacheCacheManager -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
+		
 		<!-- Tomcat -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -80,10 +101,12 @@
 			<artifactId>rome</artifactId>
 			<version>${rome.version}</version>
 		</dependency>
+		<!-- For Jaxb2Marshaller -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 		</dependency>
+		
 		
 		<!-- Test -->
 		<dependency>
