Add monitoring services (actuator)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.datasource.data: classpath*:db/hsqldb/populateDB.sql
 
 # INTERNATIONALIZATION 
 spring.messages.basename: messages/messages
+
+# ACTUATOR / MANAGEMENT
+management.contextPath: /manage
