--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!--dependency>
+		
+		<!-- Monitoring services -->
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>${spring-boot.version}</version>
-		</dependency-->
+		</dependency>
 		
 		<!-- Data -->
 		<dependency>
