--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#Profil
+`#Profil
 spring.profiles.active: jpa
 
 #Server
@@ -19,8 +19,10 @@ spring.datasource.data: classpath*:db/hsqldb/populateDB.sql
 #spring.datasource.username: sa
 #spring.datasource.password:
 
-# INTERNATIONALIZATION 
+# INTERNATIONALIZATION
 spring.messages.basename: messages/messages
 
 # ACTUATOR / MANAGEMENT
 management.contextPath: /manage
+
+# logging.level.org.springframework=DEBUG
