Migrate to Thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.messages.basename: messages/messages
 management.contextPath: /manage
 
 # logging.level.org.springframework=DEBUG
+
+
+spring.thymeleaf.cache=false
